# personal-finance-app

frontendmentor_personal_finance_backend/: .gitignore  CLAUDE.md  Dockerfile  README.md  config.py  docker-compose.yml  env.example  pyproject.toml  requirements.txt  wsgi.py
frontendmentor_personal_finance_backend/.claude/skills/explain/: SKILL.md
frontendmentor_personal_finance_backend/app/: __init__.py  extensions.py
frontendmentor_personal_finance_backend/app/models/: __init__.py  budget.py  category.py  pot.py  recurring_bill.py  token_blocklist.py  transaction.py  user.py
frontendmentor_personal_finance_backend/app/routes/: admin.py  auth.py  budgets.py  categories.py  overview.py  pots.py  recurring_bills.py  transactions.py  users.py
frontendmentor_personal_finance_backend/app/schemas/: admin_schema.py  budget_schema.py  category_schema.py  pot_schema.py  recurring_bill_schema.py  transaction_schema.py  user_schema.py
frontendmentor_personal_finance_backend/app/services/: admin_service.py  auth_service.py  budget_service.py  category_service.py  overview_service.py  pot_service.py  recurring_bill_service.py  transaction_service.py  user_service.py
frontendmentor_personal_finance_backend/app/utils/: auth.py  decorators.py  validators.py
frontendmentor_personal_finance_backend/docs/: PRD.md  postman_collection.json
frontendmentor_personal_finance_backend/tests/: conftest.py  test_admin.py  test_auth.py  test_budgets.py  test_categories.py  test_overview.py  test_pots.py  test_recurring_bills.py  test_security.py  test_transactions.py  test_users.py
(+41 files in other folders)
