[project]
name = "personal-reading-list"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
